<resources>
    <string name="app_name">Health Care</string>
    <string name="button">Button</string>
    <string name="_24_7_health_care">24/7 Health Care</string>
    <string name="dentist">DENTIST</string>
    <string name="contactnumber">ContactNumber</string>
    <string name="address">Address</string>
    <string name="fees">Fees</string>
    <string name="back">Back</string>
    <string name="select_time">Select Time</string>
    <string name="_17_51">17:51</string>
    <string name="select_date">Select Date</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="fullname">FullName</string>
    <string name="_16_05_2024">16/05/2024</string>
    <string name="buy_medicine">Buy Medicine</string>
    <string name="deliver_location_hyderabad">Deliver Location : Hyderabad</string>
    <string name="_24_7_healthcare">24/7 HEALTHCARE</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="book">BOOK</string>
    <string name="full_name">Full Name</string>
    <string name="please_fill_all_details_for_booking">Please Fill All Details For Booking</string>
    <string name="pin_code">Pin Code</string>
    <string name="contact_number">Contact Number</string>
    <string name="hi_n_hello">Hi \n Hello</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="textview">TextView</string>
    <string name="lab_test_cart_items">Lab Test Cart Items</string>
    <string name="checkout">Checkout</string>
    <string name="select_deliver_date">Select Deliver Date</string>
    <string name="select_deliver_time">Select Deliver Time</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_physicians">FAMILY PHYSICIANS</string>
    <string name="dietician">DIETICIAN</string>
    <string name="cardiologists">CARDIOLOGISTS</string>
    <string name="surgeon">SURGEON</string>
    <string name="lab_test">LAB TEST</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="logout">LOGOUT</string>
    <string name="health_articles">HEALTH ARTICLES</string>
    <string name="lab_test_and_packages">Lab Test and Packages</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_for_new_user">Register for New User</string>
</resources>